Add image description endpoint
